--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 7000",
+    "dev": "next dev --port 8000",
     "build": "next build",
-    "start": "next start --port 7000",
+    "start": "next start --port 8000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,12 +15,14 @@
     "js-cookie": "^3.0.5",
     "next": "^15.1.0",
     "nodemailer": "^6.9.16",
+    "openai": "^4.76.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "wow.js": "^1.2.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
