--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/next-auth": "^3.13.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "csv-parser": "^3.0.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.1.0",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
     "openai": "^4.76.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
-    "wow.js": "^1.2.2"
+    "reflect-metadata": "^0.2.2",
+    "wow.js": "^1.2.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
