--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
     "openai": "^4.76.3",
+    "pattern.css": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "reflect-metadata": "^0.2.2",
+    "sass": "^1.83.0",
     "wow.js": "^1.2.2",
     "zod": "^3.24.1"
   },
