--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "ppg-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --port 8000",
     "build": "next build",
     "start": "next start --port 8000",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -21,11 +23,13 @@
     "nodemailer": "^6.9.16",
     "openai": "^4.76.3",
     "pattern.css": "^1.0.0",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "reflect-metadata": "^0.2.2",
     "sass": "^1.83.0",
+    "typeorm": "^0.3.20",
     "wow.js": "^1.2.2",
     "zod": "^3.24.1"
   },
@@ -39,6 +43,9 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
