--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/next-auth": "^3.13.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
