--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "framer-motion": "^12.0.0",
     "googleapis": "^144.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.15.0",
     "reflect-metadata": "^0.2.2",
     "sass": "^1.83.0",
     "typeorm": "^0.3.20",
