--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "framer-motion": "^12.0.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "googleapis": "^144.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.482.0",
     "next": "^15.1.5",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
